y.output
Terminals unused in grammar

    TOK_ERROR


Grammar

    0 $accept: programa $end

    1 programa: prog_inicio declaraciones funciones sentencias TOK_LLAVEDERECHA

    2 prog_inicio: TOK_MAIN TOK_LLAVEIZQUIERDA

    3 declaraciones: declaracion
    4              | declaracion declaraciones

    5 declaracion: clase identificadores TOK_PUNTOYCOMA

    6 clase: clase_escalar
    7      | clase_vector

    8 clase_escalar: tipo

    9 tipo: TOK_INT
   10     | TOK_BOOLEAN

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

   12 identificadores: identificador
   13                | identificador TOK_COMA identificadores

   14 funciones: funcion funciones
   15          | %empty

   16 f_nombre: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   17 f_declaracion: f_nombre TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   18 funcion: f_declaracion sentencias TOK_LLAVEDERECHA

   19 parametros_funcion: parametro_funcion resto_parametros_funcion
   20                   | %empty

   21 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   22                         | %empty

   23 parametro_funcion: tipo identificador

   24 declaraciones_funcion: declaraciones
   25                      | %empty

   26 sentencias: sentencia
   27           | sentencia sentencias

   28 sentencia: sentencia_simple TOK_PUNTOYCOMA
   29          | bloque

   30 sentencia_simple: asignacion
   31                 | lectura
   32                 | escritura
   33                 | retorno_funcion

   34 bloque: condicional
   35       | bucle

   36 asignacion: identificador TOK_ASIGNACION exp
   37           | elemento_vector TOK_ASIGNACION exp

   38 elemento_vector: identificador TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   39 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp

   40 condicional: if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   41            | if_else_exp TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   42 if_else_exp: if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   43 while: TOK_WHILE TOK_PARENTESISIZQUIERDO

   44 bucle_exp: while exp

   45 bucle: bucle_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   46 lectura: TOK_SCANF identificador

   47 escritura: TOK_PRINTF exp

   48 retorno_funcion: TOK_RETURN exp

   49 exp: exp TOK_MAS exp
   50    | exp TOK_MENOS exp
   51    | exp TOK_DIVISION exp
   52    | exp TOK_ASTERISCO exp
   53    | TOK_MENOS exp
   54    | exp TOK_AND exp
   55    | exp TOK_OR exp
   56    | TOK_NOT exp
   57    | identificador
   58    | constante
   59    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   61    | elemento_vector
   62    | identificador TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   63 lista_expresiones: exp resto_lista_expresiones
   64                  | %empty

   65 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   66                        | %empty

   67 comparacion: exp TOK_IGUAL exp
   68            | exp TOK_DISTINTO exp
   69            | exp TOK_MENORIGUAL exp
   70            | exp TOK_MAYORIGUAL exp
   71            | exp TOK_MENOR exp
   72            | exp TOK_MAYOR exp

   73 constante: constante_logica
   74          | constante_entera

   75 constante_logica: TOK_TRUE
   76                 | TOK_FALSE

   77 constante_entera: TOK_CONSTANTE_ENTERA

   78 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOK_MAIN (258) 2
    TOK_INT (259) 9
    TOK_BOOLEAN (260) 10
    TOK_ARRAY (261) 11
    TOK_FUNCTION (262) 16
    TOK_IF (263) 39
    TOK_ELSE (264) 41
    TOK_WHILE (265) 43
    TOK_SCANF (266) 46
    TOK_PRINTF (267) 47
    TOK_RETURN (268) 48
    TOK_PUNTOYCOMA (269) 5 21 28
    TOK_COMA (270) 13 65
    TOK_PARENTESISIZQUIERDO (271) 17 39 43 59 60 62
    TOK_PARENTESISDERECHO (272) 17 40 42 45 59 60 62
    TOK_CORCHETEIZQUIERDO (273) 11 38
    TOK_CORCHETEDERECHO (274) 11 38
    TOK_LLAVEIZQUIERDA (275) 2 17 40 41 42 45
    TOK_LLAVEDERECHA (276) 1 18 40 41 42 45
    TOK_ASIGNACION (277) 36 37
    TOK_MAS (278) 49
    TOK_MENOS (279) 50 53
    TOK_DIVISION (280) 51
    TOK_ASTERISCO (281) 52
    TOK_AND (282) 54
    TOK_OR (283) 55
    TOK_NOT (284) 56
    TOK_IGUAL (285) 67
    TOK_DISTINTO (286) 68
    TOK_MENORIGUAL (287) 69
    TOK_MAYORIGUAL (288) 70
    TOK_MENOR (289) 71
    TOK_MAYOR (290) 72
    TOK_IDENTIFICADOR <atributos> (291) 16 78
    TOK_CONSTANTE_ENTERA <atributos> (292) 77
    TOK_TRUE (293) 75
    TOK_FALSE (294) 76
    TOK_ERROR (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    programa (42)
        on left: 1
        on right: 0
    prog_inicio (43)
        on left: 2
        on right: 1
    declaraciones (44)
        on left: 3 4
        on right: 1 4 24
    declaracion (45)
        on left: 5
        on right: 3 4
    clase (46)
        on left: 6 7
        on right: 5
    clase_escalar (47)
        on left: 8
        on right: 6
    tipo <atributos> (48)
        on left: 9 10
        on right: 8 11 16 23
    clase_vector (49)
        on left: 11
        on right: 7
    identificadores <atributos> (50)
        on left: 12 13
        on right: 5 13
    funciones (51)
        on left: 14 15
        on right: 1 14
    f_nombre <atributos> (52)
        on left: 16
        on right: 17
    f_declaracion <atributos> (53)
        on left: 17
        on right: 18
    funcion <atributos> (54)
        on left: 18
        on right: 14
    parametros_funcion (55)
        on left: 19 20
        on right: 17
    resto_parametros_funcion (56)
        on left: 21 22
        on right: 19 21
    parametro_funcion (57)
        on left: 23
        on right: 19 21
    declaraciones_funcion (58)
        on left: 24 25
        on right: 17
    sentencias (59)
        on left: 26 27
        on right: 1 18 27 40 41 42 45
    sentencia (60)
        on left: 28 29
        on right: 26 27
    sentencia_simple (61)
        on left: 30 31 32 33
        on right: 28
    bloque (62)
        on left: 34 35
        on right: 29
    asignacion (63)
        on left: 36 37
        on right: 30
    elemento_vector <atributos> (64)
        on left: 38
        on right: 37 61
    if_exp <atributos> (65)
        on left: 39
        on right: 40 42
    condicional (66)
        on left: 40 41
        on right: 34
    if_else_exp <atributos> (67)
        on left: 42
        on right: 41
    while <atributos> (68)
        on left: 43
        on right: 44
    bucle_exp <atributos> (69)
        on left: 44
        on right: 45
    bucle <atributos> (70)
        on left: 45
        on right: 35
    lectura (71)
        on left: 46
        on right: 31
    escritura (72)
        on left: 47
        on right: 32
    retorno_funcion (73)
        on left: 48
        on right: 33
    exp <atributos> (74)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 36 37 38 39 44 47 48 49 50 51 52 53 54 55 56 60 63 65 67 68 69 70 71 72
    lista_expresiones (75)
        on left: 63 64
        on right: 62
    resto_lista_expresiones (76)
        on left: 65 66
        on right: 63 65
    comparacion <atributos> (77)
        on left: 67 68 69 70 71 72
        on right: 59
    constante <atributos> (78)
        on left: 73 74
        on right: 58
    constante_logica <atributos> (79)
        on left: 75 76
        on right: 73
    constante_entera <atributos> (80)
        on left: 77
        on right: 11 74
    identificador <atributos> (81)
        on left: 78
        on right: 12 13 23 36 38 46 57 62


State 0

    0 $accept: . programa $end

    TOK_MAIN  shift, and go to state 1

    programa     go to state 2
    prog_inicio  go to state 3


State 1

    2 prog_inicio: TOK_MAIN . TOK_LLAVEIZQUIERDA

    TOK_LLAVEIZQUIERDA  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    1 programa: prog_inicio . declaraciones funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    declaraciones  go to state 9
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 4

    2 prog_inicio: TOK_MAIN TOK_LLAVEIZQUIERDA .

    $default  reduce using rule 2 (prog_inicio)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    9 tipo: TOK_INT .

    $default  reduce using rule 9 (tipo)


State 7

   10 tipo: TOK_BOOLEAN .

    $default  reduce using rule 10 (tipo)


State 8

   11 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 15


State 9

    1 programa: prog_inicio declaraciones . funciones sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 16

    $default  reduce using rule 15 (funciones)

    funciones      go to state 17
    f_nombre       go to state 18
    f_declaracion  go to state 19
    funcion        go to state 20


State 10

    3 declaraciones: declaracion .
    4              | declaracion . declaraciones

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    $default  reduce using rule 3 (declaraciones)

    declaraciones  go to state 21
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 11

    5 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 22

    identificadores  go to state 23
    identificador    go to state 24


State 12

    6 clase: clase_escalar .

    $default  reduce using rule 6 (clase)


State 13

    8 clase_escalar: tipo .

    $default  reduce using rule 8 (clase_escalar)


State 14

    7 clase: clase_vector .

    $default  reduce using rule 7 (clase)


State 15

   11 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 25


State 16

   16 f_nombre: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 26


State 17

    1 programa: prog_inicio declaraciones funciones . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 27
    TOK_WHILE          shift, and go to state 28
    TOK_SCANF          shift, and go to state 29
    TOK_PRINTF         shift, and go to state 30
    TOK_RETURN         shift, and go to state 31
    TOK_IDENTIFICADOR  shift, and go to state 22

    sentencias        go to state 32
    sentencia         go to state 33
    sentencia_simple  go to state 34
    bloque            go to state 35
    asignacion        go to state 36
    elemento_vector   go to state 37
    if_exp            go to state 38
    condicional       go to state 39
    if_else_exp       go to state 40
    while             go to state 41
    bucle_exp         go to state 42
    bucle             go to state 43
    lectura           go to state 44
    escritura         go to state 45
    retorno_funcion   go to state 46
    identificador     go to state 47


State 18

   17 f_declaracion: f_nombre . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  shift, and go to state 48


State 19

   18 funcion: f_declaracion . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 27
    TOK_WHILE          shift, and go to state 28
    TOK_SCANF          shift, and go to state 29
    TOK_PRINTF         shift, and go to state 30
    TOK_RETURN         shift, and go to state 31
    TOK_IDENTIFICADOR  shift, and go to state 22

    sentencias        go to state 49
    sentencia         go to state 33
    sentencia_simple  go to state 34
    bloque            go to state 35
    asignacion        go to state 36
    elemento_vector   go to state 37
    if_exp            go to state 38
    condicional       go to state 39
    if_else_exp       go to state 40
    while             go to state 41
    bucle_exp         go to state 42
    bucle             go to state 43
    lectura           go to state 44
    escritura         go to state 45
    retorno_funcion   go to state 46
    identificador     go to state 47


State 20

   14 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 16

    $default  reduce using rule 15 (funciones)

    funciones      go to state 50
    f_nombre       go to state 18
    f_declaracion  go to state 19
    funcion        go to state 20


State 21

    4 declaraciones: declaracion declaraciones .

    $default  reduce using rule 4 (declaraciones)


State 22

   78 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 78 (identificador)


State 23

    5 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 51


State 24

   12 identificadores: identificador .
   13                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 52

    $default  reduce using rule 12 (identificadores)


State 25

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . constante_entera TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 53

    constante_entera  go to state 54


State 26

   16 f_nombre: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 55


State 27

   39 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 56


State 28

   43 while: TOK_WHILE . TOK_PARENTESISIZQUIERDO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 57


State 29

   46 lectura: TOK_SCANF . identificador

    TOK_IDENTIFICADOR  shift, and go to state 22

    identificador  go to state 58


State 30

   47 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 65
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 31

   48 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 70
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 32

    1 programa: prog_inicio declaraciones funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 71


State 33

   26 sentencias: sentencia .
   27           | sentencia . sentencias

    TOK_IF             shift, and go to state 27
    TOK_WHILE          shift, and go to state 28
    TOK_SCANF          shift, and go to state 29
    TOK_PRINTF         shift, and go to state 30
    TOK_RETURN         shift, and go to state 31
    TOK_IDENTIFICADOR  shift, and go to state 22

    $default  reduce using rule 26 (sentencias)

    sentencias        go to state 72
    sentencia         go to state 33
    sentencia_simple  go to state 34
    bloque            go to state 35
    asignacion        go to state 36
    elemento_vector   go to state 37
    if_exp            go to state 38
    condicional       go to state 39
    if_else_exp       go to state 40
    while             go to state 41
    bucle_exp         go to state 42
    bucle             go to state 43
    lectura           go to state 44
    escritura         go to state 45
    retorno_funcion   go to state 46
    identificador     go to state 47


State 34

   28 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 73


State 35

   29 sentencia: bloque .

    $default  reduce using rule 29 (sentencia)


State 36

   30 sentencia_simple: asignacion .

    $default  reduce using rule 30 (sentencia_simple)


State 37

   37 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 74


State 38

   40 condicional: if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   42 if_else_exp: if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  shift, and go to state 75


State 39

   34 bloque: condicional .

    $default  reduce using rule 34 (bloque)


State 40

   41 condicional: if_else_exp . TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_ELSE  shift, and go to state 76


State 41

   44 bucle_exp: while . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 77
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 42

   45 bucle: bucle_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  shift, and go to state 78


State 43

   35 bloque: bucle .

    $default  reduce using rule 35 (bloque)


State 44

   31 sentencia_simple: lectura .

    $default  reduce using rule 31 (sentencia_simple)


State 45

   32 sentencia_simple: escritura .

    $default  reduce using rule 32 (sentencia_simple)


State 46

   33 sentencia_simple: retorno_funcion .

    $default  reduce using rule 33 (sentencia_simple)


State 47

   36 asignacion: identificador . TOK_ASIGNACION exp
   38 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 79
    TOK_ASIGNACION         shift, and go to state 80


State 48

   17 f_declaracion: f_nombre TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    $default  reduce using rule 20 (parametros_funcion)

    tipo                go to state 81
    parametros_funcion  go to state 82
    parametro_funcion   go to state 83


State 49

   18 funcion: f_declaracion sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 84


State 50

   14 funciones: funcion funciones .

    $default  reduce using rule 14 (funciones)


State 51

    5 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 5 (declaracion)


State 52

   13 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 22

    identificadores  go to state 85
    identificador    go to state 24


State 53

   77 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 77 (constante_entera)


State 54

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 86


State 55

   16 f_nombre: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce using rule 16 (f_nombre)


State 56

   39 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 87
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 57

   43 while: TOK_WHILE TOK_PARENTESISIZQUIERDO .

    $default  reduce using rule 43 (while)


State 58

   46 lectura: TOK_SCANF identificador .

    $default  reduce using rule 46 (lectura)


State 59

   59 exp: TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO
   60    | TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 88
    comparacion       go to state 89
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 60

   53 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 90
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 61

   56 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 91
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 62

   75 constante_logica: TOK_TRUE .

    $default  reduce using rule 75 (constante_logica)


State 63

   76 constante_logica: TOK_FALSE .

    $default  reduce using rule 76 (constante_logica)


State 64

   61 exp: elemento_vector .

    $default  reduce using rule 61 (exp)


State 65

   47 escritura: TOK_PRINTF exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 92
    TOK_MENOS      shift, and go to state 93
    TOK_DIVISION   shift, and go to state 94
    TOK_ASTERISCO  shift, and go to state 95
    TOK_AND        shift, and go to state 96
    TOK_OR         shift, and go to state 97

    $default  reduce using rule 47 (escritura)


State 66

   58 exp: constante .

    $default  reduce using rule 58 (exp)


State 67

   73 constante: constante_logica .

    $default  reduce using rule 73 (constante)


State 68

   74 constante: constante_entera .

    $default  reduce using rule 74 (constante)


State 69

   38 elemento_vector: identificador . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   57 exp: identificador .
   62    | identificador . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 98
    TOK_CORCHETEIZQUIERDO    shift, and go to state 79

    $default  reduce using rule 57 (exp)


State 70

   48 retorno_funcion: TOK_RETURN exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 92
    TOK_MENOS      shift, and go to state 93
    TOK_DIVISION   shift, and go to state 94
    TOK_ASTERISCO  shift, and go to state 95
    TOK_AND        shift, and go to state 96
    TOK_OR         shift, and go to state 97

    $default  reduce using rule 48 (retorno_funcion)


State 71

    1 programa: prog_inicio declaraciones funciones sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 1 (programa)


State 72

   27 sentencias: sentencia sentencias .

    $default  reduce using rule 27 (sentencias)


State 73

   28 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce using rule 28 (sentencia)


State 74

   37 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 99
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 75

   40 condicional: if_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   42 if_else_exp: if_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 100


State 76

   41 condicional: if_else_exp TOK_ELSE . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 101


State 77

   44 bucle_exp: while exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 92
    TOK_MENOS      shift, and go to state 93
    TOK_DIVISION   shift, and go to state 94
    TOK_ASTERISCO  shift, and go to state 95
    TOK_AND        shift, and go to state 96
    TOK_OR         shift, and go to state 97

    $default  reduce using rule 44 (bucle_exp)


State 78

   45 bucle: bucle_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 102


State 79

   38 elemento_vector: identificador TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 103
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 80

   36 asignacion: identificador TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 59
    TOK_MENOS                shift, and go to state 60
    TOK_NOT                  shift, and go to state 61
    TOK_IDENTIFICADOR        shift, and go to state 22
    TOK_CONSTANTE_ENTERA     shift, and go to state 53
    TOK_TRUE                 shift, and go to state 62
    TOK_FALSE                shift, and go to state 63

    elemento_vector   go to state 64
    exp               go to state 104
    constante         go to state 66
    constante_logica  go to state 67
    constante_entera  go to state 68
    identificador     go to state 69


State 81

   23 parametro_funcion: tipo . identificador

    TOK_IDENTIFICADOR  shift, and go to state 22

    identificador  go to state 105


State 82

   17 f_declaracion: f_nombre TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  shift, and go to state 106


State 83

   19 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  shift, and go to state 107

    $default  reduce using rule 22 (resto_parametros_funcion)

    resto_parametros_funcion  go to state 108


State 84

   18 funcion: f_declaracion sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 18 (funcion)


State 85

   13 identificadores: identificador TOK_COMA identificadores .

    $default  reduce using rule 13 (identificadores)


State 86

   11 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO constante_entera TOK_CORCHETEDERECHO .

    $default  reduce using rule 11 (clase_vector)


State 87

   39 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp .
   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 92
    TOK_MENOS      shift, and go to state 93
    TOK_DIVISION   shift, and go to state 94
    TOK_ASTERISCO  shift, and go to state 95
    TOK_AND        shift, and go to state 96
    TOK_OR         shift, and go to state 97

    $default  reduce using rule 39 (if_exp)


State 88

   49 exp: exp . TOK_MAS exp
   50    | exp . TOK_MENOS exp
   51    | exp . TOK_DIVISION exp
   52    | exp . TOK_ASTERISCO exp
   54    | exp . TOK_AND exp
   55    | exp . TOK_OR exp
   60    | TOK_PARENTESISIZQUIERDO exp . TOK_PARENTESISDERECHO
   67 comparacion: exp . TOK_IGUAL exp
   68            | exp . TOK_DISTINTO exp
   69            | exp . TOK_MENORIGUAL exp
   70            | exp . TOK_MAYORIGUAL exp
   71            | exp . TOK_MENOR exp
   72            | exp . TOK_MAYOR exp

    TOK_PARENTESISDERECHO  shift, and go to state 109
    TOK_MAS                shift, and go to state 92
    TOK_MENOS              shift, and go to state 93
    TOK_DIVISION           shift, and go to state 94
    TOK_ASTERISCO          shift, and go to state 95
    TOK_AND                shift, and go to state 96
    TOK_OR                 shift, and go to state 97
    TOK_IGUAL              shift, and go to state 110
    TOK_DISTINTO           shift, and go to state 111
    TOK_MENORIGUAL         shift, and go to state 112
    TOK_MAYORIGUAL         shift, and go to state 113
    TOK_MENOR              shift, and go to state 114
    TOK_MAYOR              shift, and go to state 115


State 89

   59 exp: TOK_PARENTESISIZQUIERDO comparacion . TOK_PARENTESISDERECHO

    TOK_PARENTESISDERECHO  shift, and go to state 116


State 90
